# energy-behavior-prosumers-kaggle-mlops

./: .env.example  .gitignore  MLFLOW_README.md  README.md  docker-compose.yml  pyproject.toml  requirements_mlflow.txt
enefit/: __init__.py  public_timeseries_testing_util.py
notebooks/: enefit-xgboost-starter.ipynb
scripts/: run_pipeline.sh  setup_env.sh  start_mlflow.sh  stop_mlflow.sh
src/energy_behavior_prosumers/: __init__.py  config.py  features.py  mlflow_utils.py  models.py  pipeline.py
